--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-Flask==2.3.3
+Flask==2.3.2
 google-auth==2.22.0
-google-auth-oauthlib==0.6.0
-google-api-python-client==2.90.0
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.0
+google-api-python-client==2.94.0
+Pillow==9.5.0
+pytesseract==0.3.10
+openai==1.33.0
 python-dotenv==1.0.0
